@@ -1,36 +1,35 @@
 package com.zebrunner.agent.core.registrar.ci;
 
-import com.zebrunner.agent.core.registrar.domain.CiContextDTO;
 import lombok.AccessLevel;
+import lombok.Getter;
 import lombok.NoArgsConstructor;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+
+import com.zebrunner.agent.core.registrar.domain.CiContext;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class CompositeCiContextResolver implements CiContextResolver {
 
-    private static final CompositeCiContextResolver INSTANCE = new CompositeCiContextResolver();
+    @Getter
+    private static final CompositeCiContextResolver instance = new CompositeCiContextResolver();
 
-    public static CompositeCiContextResolver getInstance() {
-        return INSTANCE;
-    }
-
-    private final List<CiContextResolver> ciContextResolvers = Arrays.asList(
-            new JenkinsCiContextResolver(),
-            new TeamCityCiContextResolver(),
-            new CircleCiContextResolver(),
-            new TravisCiContextResolver()
+    private final List<CiContextResolver> resolvers = List.of(
+            JenkinsCiContextResolver.getInstance(),
+            TeamCityCiContextResolver.getInstance(),
+            CircleCiContextResolver.getInstance(),
+            TravisCiContextResolver.getInstance(),
+            BambooCiContextResolver.getInstance()
     );
 
     @Override
-    public CiContextDTO resolve() {
-        return ciContextResolvers.stream()
-                                 .map(CiContextResolver::resolve)
-                                 .filter(Objects::nonNull)
-                                 .findFirst()
-                                 .orElse(null);
+    public CiContext resolve() {
+        return resolvers.stream()
+                        .map(CiContextResolver::resolve)
+                        .filter(Objects::nonNull)
+                        .findFirst()
+                        .orElse(null);
     }
 
 }
